# pandemic

./: .gitignore  Action.hs  City.hs  CoAction.hs  Cures.hs  Deck.hs  Diseases.hs  DrawStage.hs  EventEffect.hs  Exception.hs  GameLoop.hs  Globals.hs  GlobalsConfig.hs  GlobalsView.hs  InfectionCard.hs  InfectionRate.hs  Interpreter.hs  LICENSE  Lenses.hs  Main.hs  Notification.hs  OutbreakCounter.hs  Pairing.hs  Player.hs  PlayerCard.hs  README.md  RandomIO.hs  Role.hs  RunAction.hs  Space.hs  TAGS  Target.hs  Test.hs  pandemic.cabal  pandemic.hs  stack.yaml
Game/: Action.hs  Deck.hs  Diseases.hs  Game.cabal  Globals.hs  Notification.hs  PlayerCard.hs  RandomIO.hs
Game/src/: Cures.hs  DrawStage.hs  InfectionRate.hs  OutbreakCounter.hs  Space.hs  commands.hs
Web/: Main.hs  Server.hs  TAGS  Web.cabal
Web/src/: GetAPI.hs  Main.hs  PostAPI.hs  Server.hs
