name:                Web
version:             0.1.0.0
author:              spencerturkel
maintainer:          spencer@palmbeachsoftware.com
build-type:          Simple
cabal-version:       >=1.10

executable Web
  main-is:             Main.hs
  hs-source-dirs:      src
  other-extensions:    DataKinds
                     , DeriveGeneric
                     , FlexibleContexts
                     , Rank2Types
                     , TemplateHaskell
                     , TypeOperators
  other-modules:       GlobalsView
                     , Server
  build-depends:       aeson >=0.11 && <0.12
                     , base >=4.8 && <4.9
                     , Game
                     , lens >=4.14 && <4.15
                     , mtl >=2.2 && <2.3
                     , servant
                     , servant-server
                     , stm
                     , warp
  default-language:    Haskell2010
